# elasticemail-rust

./: Cargo.toml  README.md
docs/: AccessLevel.md  AccountStatusEnum.md  ApiKey.md  ApiKeyPayload.md  BodyContentType.md  BodyPart.md  Campaign.md  CampaignOptions.md  CampaignRecipient.md  CampaignStatus.md  CampaignTemplate.md  CampaignsApi.md  CertificateValidationStatus.md  ChannelLogStatusSummary.md  CompressionFormat.md  ConsentData.md  ConsentTracking.md  Contact.md  ContactActivity.md  ContactHistEventType.md  ContactHistory.md  ContactPayload.md  ContactSource.md  ContactStatus.md  ContactUpdatePayload.md  ContactsApi.md  ContactsList.md  DeliveryOptimizationType.md  DomainData.md  DomainDetail.md  DomainOwner.md  DomainPayload.md  DomainUpdatePayload.md  DomainsApi.md  EmailContent.md  EmailData.md  EmailJobFailedStatus.md  EmailJobStatus.md  EmailMessageData.md  EmailPredictedValidationStatus.md  (+72 more)
src/apis/: campaigns_api.rs  configuration.rs  contacts_api.rs  domains_api.rs  emails_api.rs  events_api.rs  files_api.rs  inbound_route_api.rs  lists_api.rs  mod.rs  security_api.rs  segments_api.rs  statistics_api.rs  sub_accounts_api.rs  suppressions_api.rs  templates_api.rs  verifications_api.rs
src/models/: access_level.rs  account_status_enum.rs  api_key.rs  api_key_payload.rs  body_content_type.rs  body_part.rs  campaign.rs  campaign_options.rs  campaign_recipient.rs  campaign_status.rs  campaign_template.rs  certificate_validation_status.rs  channel_log_status_summary.rs  compression_format.rs  consent_data.rs  consent_tracking.rs  contact.rs  contact_activity.rs  contact_hist_event_type.rs  contact_history.rs  contact_payload.rs  contact_source.rs  contact_status.rs  contact_update_payload.rs  contacts_list.rs  delivery_optimization_type.rs  domain_data.rs  domain_detail.rs  domain_owner.rs  domain_payload.rs  domain_update_payload.rs  email_content.rs  email_data.rs  email_job_failed_status.rs  email_job_status.rs  email_message_data.rs  email_predicted_validation_status.rs  email_recipient.rs  email_send.rs  email_status.rs  (+58 more)
